# permitos

./: .gitignore  HACKATHON_DEMO_DESIGN.md  HACKER_RESOURCES.md  README.md  TEAM_SHARE_PACKET.md  TOOL_INTEGRATION_PLAN.md  TWO_PERSON_BUILD_SPLIT.md  ehs-agent-control-loop-ceo-review.md  ehs-agent-test-plan.md  ehs-permit-agent-autoplan-review.md  package.json  pnpm-lock.yaml  vitest.config.ts
research_agentic/: README.md  pyproject.toml
research_agentic/research_agentic/: __init__.py  authority_hosts.py  policy.py  prompts.py  register.py  researcher.py  sandbox.py  sandbox_runtime.py  store.py  task.py
research_agentic/research_agentic/configs/: researcher.yml
research_agentic/research_agentic/functions/: researcher_tools.py
research_agentic/research_agentic/sandbox_tools/: artifacts.py  browser.py  compute.py  documents.py  skills.py  web.py
research_agentic/research_agentic/scripts/: smoke_researcher.py  smoke_web_fetch.py
research_agentic/research_agentic/skills/ca-ab2588-hot-spots/: SKILL.md  program.json  reporting-thresholds.md
research_agentic/research_agentic/skills/ca-apsa-spcc/: SKILL.md  program.json
research_agentic/research_agentic/skills/ca-calarp-program/: SKILL.md  five-year-accident-history.md  program-levels-determination.md  program.json  rmp-submission-process.md  threshold-quantities.md
research_agentic/research_agentic/skills/ca-construction-general-permit/: SKILL.md  active-treatment-system.md  program.json  (+2 more)
research_agentic/tests/: test_artifacts.py  test_authority_rank.py  test_browser.py  test_cap_text.py  test_compute_voc.py  test_documents.py  test_functions.py  test_host_fetchable.py  test_import.py  test_policy_paths.py  test_prompts.py  test_researcher.py  test_researcher_config.py  test_runtime_trace.py  test_sandbox_runtime.py  test_sandbox_session.py  test_skills.py  test_store.py  test_task.py  test_web.py
research_aiq/: .gitignore  README.md  pyproject.toml
research_aiq/configs/: _spike.yml  _spike_agent.yml
research_aiq/research_aiq/: __init__.py  eval_report.py  evaluators.py  invariants.py  observability.py  optimize.py  persistence.py  prompts.py  register.py  run_store.py
research_aiq/research_aiq/configs/: eval_config.yml  workflow.yml
research_aiq/research_aiq/eval/: dataset.json  dataset_notes.md  optimize_report.json  optimize_report.md  scorecard.json  scorecard.md
research_aiq/research_aiq/functions/: _spike.py  finalize.py  orchestrate.py  plan_candidates.py  spawn_researchers.py  submit_plan.py
research_aiq/tests/: test_eval_report.py  test_evaluators.py  test_fail_loud.py  test_finalize.py  test_invariants.py  test_observability.py  test_optimize.py  test_orchestrate.py  test_orchestrate_concurrency.py  test_persistence.py  test_plan_candidates.py  test_prompts.py  test_run_store.py  test_spawn_researchers.py  test_submit_plan.py
research_core/: README.md  pyproject.toml
research_core/research_core/: __init__.py  _format.py  completeness.py  confidence.py  pipeline.py  planner.py  program_registry.py  prompts.py  scope.py  synthesis.py  tool_catalog.py  types.py  verifier.py
research_core/tests/: canonicalize.py  test_canonicalize.py  test_completeness.py  test_confidence.py  test_parity.py  test_planner.py  test_program_registry.py  test_run_recall_floor.py  test_run_repair.py  test_run_split.py  test_scope.py  test_scope_extraction.py  test_synthesis.py  test_tool_catalog.py  test_types_smoke.py  test_verifier.py
research_core/tests/fixtures/: __init__.py  scenarios.py
research_core/tests/goldens/: complex.json  construction.json  missing_facts.json
(+480 files in other folders)
