[project]
name = "research_aiq"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["nvidia-nat[langchain]>=1.5", "research_core", "httpx"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[project.entry-points.'nat.components']
research_aiq = "research_aiq.register"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["research_aiq"]

[tool.uv.sources]
research_core = { path = "../research_core", editable = true }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
