[project]
name = "research_core"
version = "0.1.0"
description = "Deterministic EHS research core (Python port). Parity-validated against the TypeScript pipeline."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
llm = ["openai>=1.40"]
dev = ["pytest>=8", "ruff>=0.6"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["research_core"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
